--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Biomes</title>
+    <link rel="icon" href="/public/icones/palmtree-logo.svg">
+    <link rel="stylesheet" href="/src/css/style.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
+    <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
-<body>
-    
+
 <h1>Test</h1>
 
 <div class="carrousel" x-data="{}">
@@ -14,31 +19,31 @@
     <div class="carrousel_parent-ecrans">
         <div id="ecran-1" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/1/500/300" alt="image ecran 1">
+                <img src="public/images/jungle.jpg" alt="image ecran 1" class="carrousel_images">
                 <figcaption>Ecran 1</figcaption>
             </figure>
         </div>
-        <div id="ecran-2" class="carrousel_ecran">
+        <div id="ecran-2" class="carrousel_ecran" class="carrousel_images">
             <figure>
-                <img src="https://picsum.photos/seed/2/500/300" alt="image ecran 2">
+                <img src="public/images/mesa.jpg" alt="image ecran 2">
                 <figcaption>Ecran 2</figcaption>
             </figure>
         </div>
         <div id="ecran-3" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/3/500/300" alt="image ecran 3">
+                <img src="public/images/ocean.jpg" alt="image ecran 3" class="carrousel_images">
                 <figcaption>Ecran 3</figcaption>
             </figure>
         </div>
         <div id="ecran-4" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/4/500/300" alt="image ecran 4">
+                <img src="public/images/desert.jpg" alt="image ecran 4" class="carrousel_images">
                 <figcaption>Ecran 4</figcaption>
             </figure>
         </div>
         <div id="ecran-5" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/5/500/300" alt="image ecran 5">
+                <img src="" alt="image ecran 5" class="carrousel_images">
                 <figcaption>Ecran 5</figcaption>
             </figure>
         </div>
@@ -51,6 +56,6 @@
         <li><a href="#ecran-5" class="caroussel_lien">ecran 5</a></li>
     </ul>
 </div>
-
 </body>
+
 </html>
