Base carrousel test

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script defer src="https://unpkg.com/alpinejs"></script>
 </head>
 
-<h1>Test</h1>
+<h1>Carrousel de Biomes</h1>
 
 <div class="carrousel" x-data="{}">
     <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant"><</button><button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant">></button>
@@ -20,40 +20,40 @@
         <div id="ecran-1" class="carrousel_ecran">
             <figure>
                 <img src="public/images/jungle.jpg" alt="image ecran 1" class="carrousel_images">
-                <figcaption>Ecran 1</figcaption>
+                <figcaption>Jungle</figcaption>
             </figure>
         </div>
         <div id="ecran-2" class="carrousel_ecran" class="carrousel_images">
             <figure>
                 <img src="public/images/mesa.jpg" alt="image ecran 2">
-                <figcaption>Ecran 2</figcaption>
+                <figcaption>Mésa</figcaption>
             </figure>
         </div>
         <div id="ecran-3" class="carrousel_ecran">
             <figure>
                 <img src="public/images/ocean.jpg" alt="image ecran 3" class="carrousel_images">
-                <figcaption>Ecran 3</figcaption>
+                <figcaption>Océan</figcaption>
             </figure>
         </div>
         <div id="ecran-4" class="carrousel_ecran">
             <figure>
                 <img src="public/images/desert.jpg" alt="image ecran 4" class="carrousel_images">
-                <figcaption>Ecran 4</figcaption>
+                <figcaption>Désert</figcaption>
             </figure>
         </div>
         <div id="ecran-5" class="carrousel_ecran">
             <figure>
-                <img src="" alt="image ecran 5" class="carrousel_images">
-                <figcaption>Ecran 5</figcaption>
+                <img src="public/images/arctic.jpg" alt="image ecran 5" class="carrousel_images">
+                <figcaption>Arctique</figcaption>
             </figure>
         </div>
     </div>
     <ul class="caroussel_liste-liens">
-        <li><a href="#ecran-1" class="caroussel_lien">ecran 1</a></li>
-        <li><a href="#ecran-2" class="caroussel_lien">ecran 2</a></li>
-        <li><a href="#ecran-3" class="caroussel_lien">ecran 3</a></li>
-        <li><a href="#ecran-4" class="caroussel_lien">ecran 4</a></li>
-        <li><a href="#ecran-5" class="caroussel_lien">ecran 5</a></li>
+        <li><a href="#ecran-1" class="caroussel_lien">Jungle</a></li>
+        <li><a href="#ecran-2" class="caroussel_lien">Mésa</a></li>
+        <li><a href="#ecran-3" class="caroussel_lien">Océan</a></li>
+        <li><a href="#ecran-4" class="caroussel_lien">Désert</a></li>
+        <li><a href="#ecran-5" class="caroussel_lien">Arctique</a></li>
     </ul>
 </div>
 </body>
