--- a/error404.html
+++ b/error404.html
@@ -8,8 +8,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Erreur 404</title>
-    <link rel="icon" href="">
+    <title>Erreur 404 | BioBiomes</title>
+    <link rel="icon" href="/public/icones/palmtree-error.svg">
     <link rel="stylesheet" href="/src/css//vendors/style.css">
     </link>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
