--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biomes</title>
+    <title>BioBiomes | Accueil</title>
     <link rel="icon" href="/public/icones/palmtree-logo.svg">
     <link rel="stylesheet" href="/src/css/vendors/style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
