Ajouts et précisions des class

--- a/error404.html
+++ b/error404.html
@@ -19,19 +19,13 @@
 
 <body class="error-page">
     <header>
-        <aside>
-            <button aria-controls="Homepage" @click="HP = !HP" class="homelogo">
-                <a href="../index.html">
-                    <img src="../public/icones/MdiHome.svg" alt="accueil">
-                </a>
-            </button>
-        </aside>
+           
     </header>
 
     <div class="error-container">
         <h2>Erreur 404</h2>
-        <p>Désolé, la page que vous recherchez semble introuvable, veuillez retourner à :<a href="../index.html"><img
-                    src="../public/icones/MdiHomemenu.svg" alt="Logoerror" class="logoerror"></a>
+        <p>Désolé, la page que vous recherchez semble introuvable, veuillez retourner à :<a href="index.html"><img
+                     alt="Logoerror" class="logoerror"></a>
         </p>
 
     </div>
