Qlq ajouts pour le carrousel CSS

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <h1>Carrousel de Biomes</h1>
 
 <div class="carrousel" x-data="{hrefCourant:'#ecran-1'}">
-    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant">&#8249;</button>
-    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant">&#8250;</button>
+    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="decreEcran">&#8249;</button>
+    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant" @click="incrementEcran">&#8250;</button>
     <div class="carrousel_parent-ecrans" x-ref="parent" @scroll.debounce.250ms.passive=" hrefCourant = '#' +
                 [...$refs.parent.children]
                 .find(e => e.getBoundingClientRect().x >= 0)
