Ajout pour avoir un bouton interractif, échec

--- a/index.html
+++ b/index.html
@@ -10,13 +10,41 @@
     <link rel="stylesheet" href="/src/css/vendors/style.css">
     <script defer src="https://cdn.jsdelivr.net/npm/@alpinejs/collapse@3.x.x/dist/cdn.min.js"></script>
     <script defer src="https://unpkg.com/alpinejs"></script>
+    <script>
+        Alpine.data('carrousel', function () {
+            return {
+                carrouselActif: true,
+                toggleCarrousel() {
+                    this.carrouselActif = !this.carrouselActif;
+                },
+            };
+        });
+
+        Alpine.data('carrousel', function () {
+            return {
+                incrementEcran() {
+                    if (this.carrouselActif && this.ecrans < 5) {
+                        this.ecrans++;
+                        this.sethrefCourant();
+                    }
+                },
+                decreEcran() {
+                    if (this.carrouselActif && this.ecrans > 1) {
+                        this.ecrans--;
+                        this.sethrefCourant();
+                    }
+                },
+            };
+        });
+    </script>
 </head>
 
 <h1>Carrousel de Biomes</h1>
 
 <div class="carrousel" x-data="{hrefCourant:'#ecran-1', ecrans:5}">
-    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="decreEcran">&#8249;</button>
-    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant" @click="incrementEcran">&#8250;</button>
+    <button @click="toggleCarrousel" class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="decreEcran">&#8249;</button>
+    <button @click="toggleCarrousel" class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant"
+        @click="incrementEcran">&#8250;</button>
     <div class="carrousel_parent-ecrans" x-ref="parent" @scroll.debounce.250ms.passive=" hrefCourant = '#' +
                 [...$refs.parent.children]
                 .find(e => e.getBoundingClientRect().x >= 0)
