Dernières corrections carrousel boutons

--- a/index.html
+++ b/index.html
@@ -55,22 +55,16 @@
                 <br>
             </div>
             <ul class="caroussel_liste-liens">
-                <button class="lien"></button>
                 <li class="list"><a href="#ecran-1" :class="{actif:hrefCourant==='#ecran-1'}"
-                        class="carroussel_lien">Jungle</a></li><button class="lien"><button class="lien"></button>
-                    <button class="lien"></button>
-                    <li class="list"><a href="#ecran-2" :class="{actif:hrefCourant==='#ecran-2'}"
-                            class="carroussel_lien">Mésa</a></li>
-                </button>
-                <button class="lien"></button>
+                        class="carroussel_lien">Jungle</a></li>
+                <li class="list"><a href="#ecran-2" :class="{actif:hrefCourant==='#ecran-2'}"
+                        class="carroussel_lien">Mésa</a></li>
                 <li class="list"><a href="#ecran-3" :class="{actif:hrefCourant==='#ecran-3'}"
-                        class="carroussel_lien">Océan</a></li></button>
-                <button class="lien"></button>
+                        class="carroussel_lien">Océan</a></li>
                 <li class="list"><a href="#ecran-4" :class="{actif:hrefCourant==='#ecran-4'}"
-                        class="carroussel_lien">Désert</a></li></button>
-                <button class="lien"></button>
+                        class="carroussel_lien">Désert</a></li>
                 <li class="list"><a href="#ecran-5" :class="{actif:hrefCourant==='#ecran-5'}"
-                        class="carroussel_lien">Arctique</a></li></button>
+                        class="carroussel_lien">Arctique</a></li>
             </ul>
         </div>
     </section>
